# kv-search

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  commitlint.yml  release-pypi.yml  semantic-release.yml
docs/source/: api.rst  conf.py  index.rst
docs/superpowers/plans/: 2026-05-05-dragonglass-kv-search-migration.md  2026-05-05-kv-search-v0.2.md
docs/superpowers/specs/: 2026-05-05-kv-search-integration-design.md
kv_search/: __about__.py  __init__.py  _backends.py  _elasticsearch_backend.py  _engine.py  _interfaces.py  _session.py  _types.py
tests/: test_engine.py  test_obsidian_backend.py  test_session.py  test_types.py
