[project]
dependencies = []
name = "kv-search"
dynamic = ["version", "readme"]
description = "Keyword, vector hybrid search with semantic understanding"
license = { file = "LICENSE.md" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"

[[project.authors]]
name = "Anton Lu"
email = "anton96lu@gmail.com"

[project.urls]
homepage = "https://github.com/antolu/kv-search"
documentation = "https://github.com/antolu/kv-search"
repository = "https://github.com/antolu/kv-search"
changelog = "https://github.com/antolu/kv-search/releases"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
doc = ["sphinx", "myst-parser", "sphinx-copybutton"]
elasticsearch = [
  "elasticsearch",
  "pydantic >= 2.12.5",
]
dev = [
  "pre-commit==4.5.1",
  "ruff==0.15.10",
  "mypy==1.20.1",
]

[build-system]
requires = ["setuptools >= 61", "setuptools-scm[toml] ~= 10.0", "wheel"]
build-backend = "setuptools.build_meta"

# keep this for dynamic versioning
[tool.setuptools_scm]
write_to = "kv_search/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["."]
include = ["kv_search*"]
namespaces = false

[tool.setuptools.package-data]
kv_search = ["py.typed"]

[project.scripts]
# project endpoints here

# include black configuration for easy to use with VSCode and PyCharm
# autoformatter
# For pre-commit, only ruff is used.
[tool.black]
target-version = ["py311"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  ".venv",
]

line-length = 88         # black and ruff default
target-version = "py311"

[tool.ruff.lint]
# All rules can be found here: https://docs.astral.sh/ruff/rules/
select = [
  "F",   # pyflakes
  "E",   # error  (pycodestyle)
  "W",   # warning (pycodestyle)
  "I",   # isort
  "N",   # naming  (pep8)
  "UP",  # pyupgrade
  "PLC", # convention  (pylint)
  "PLE", # error  (pylint)
  "PLW", # warning  (pylint)
  "PLR", # refactor  (pylint)
  # "D",  # docstring (pydocstyle),  # not enabled by default
  "PD",     # pandas
  "TRY",    # tryceratops
  "NPY",    # numpy
  "NPY201", # numpy 2.0
  "PERF",   # perflint
  "RUF",    # ruff
  # v flake8 v
  "B",
  "C4",
  "FBT",
  "A",
  "EM",
  "ISC",
  "FA",
  "G",
  "PIE",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
]
fixable = ["ALL"]
ignore = ["E501", "W505", "ISC001", "PLW2901", "N812", "N806", "G004"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
preview = true

[tool.mypy]
disallow_untyped_defs = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

# for pyright LSP
[tool.pyright]
reportPrivateImportUsage = "none"
